<resources>
    <string name="app_name">calculate</string>
    <string name="number_0">0</string>
    <string name="button_ac">AC</string>
    <string name="signs">+/-</string>
    <string name="percent">%</string>
    <string name="division">÷</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="multiplication">x</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="minus">-</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="room">key1</string>
    <string name="room1">key1</string>
</resources>